Name:                govhack-brissy-parks
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             MIT
Author:              Team Lambda
Maintainer:          ben.kolera@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable govhack-brissy-parks
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                        >= 4.4       && < 5
    , bytestring                >= 0.9.1   && < 0.11
    , heist                     >= 0.13    && < 0.14
    , lens                      >= 3.7.6   && < 4.2
    , MonadCatchIO-transformers >= 0.2.1   && < 0.4
    , mtl                       >= 2       && < 3
    , snap                      >= 0.13    && < 0.14
    , snap-core                 >= 0.9     && < 0.11
    , snap-server               >= 0.9     && < 0.11
    , snap-loader-static        >= 0.9     && < 0.10
    , snaplet-postgresql-simple
    , text                      >= 0.11    && < 1.2
    , time                      >= 1.1     && < 1.5
    , xmlhtml                   >= 0.1


  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind


Executable import-facilities
  hs-source-dirs: import,src
  main-is: Facilities.hs

  Build-depends:
    base                        >= 4.4       && < 5
    , bytestring                >= 0.9.1   && < 0.11
    , cassava                   
    , configurator
    , errors
    , lens
    , transformers
    , postgresql-simple  
    , vector
  
