Name:                govhack-brissy-parks
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             MIT
Author:              Team Lambda
Maintainer:          ben.kolera@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable app
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                        >= 4.4       && < 5
    , aeson
    , bifunctors
    , bytestring                >= 0.10
    , configurator              > 0.2
    , heist                     >= 0.13    && < 0.14
    , lens                      >= 4       && < 5
    , MonadCatchIO-transformers >= 0.2.1   && < 0.4
    , mtl                       >= 2       && < 3
    , resource-pool-catchio
    , safe                      >= 0.3.5
    , split
    , snap                      >= 0.13    && < 0.14
    , snap-core                 >= 0.9     && < 0.11
    , snap-extras               >= 0.9
    , snap-server               >= 0.9     && < 0.11
    , snap-loader-static        >= 0.9     && < 0.10
    , snaplet-postgresql-simple >= 0.5     && < 0.6
    , text                      >= 0.11    && < 1.2
    , time                      >= 1.1     && < 1.5
    , xmlhtml                   >= 0.1


  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind


Executable import
  hs-source-dirs: import,src
  main-is: Main.hs

  Build-depends:
    base                        >= 4.4       && < 5
    , async
    , bifunctors
    , bytestring                >= 0.9.1   && < 0.11
    , cassava
    , configurator
    , errors
    , lens
    , process
    , transformers
    , postgresql-simple
    , vector

  ghc-options: -threaded -O2
